src/test/ui/regions/regions-infer-invariance-due-to-decl.stderr
error[E0308]: mismatched types
  --> $DIR/regions-infer-invariance-due-to-decl.rs:12:5
   |
LL |     b_isize
   |     ^^^^^^^ lifetime mismatch
   |
   = note: expected type `Invariant<'static>`
              found type `Invariant<'r>`
note: the lifetime 'r as defined on the function body at 11:23...
  --> $DIR/regions-infer-invariance-due-to-decl.rs:11:23
   |
LL | fn to_longer_lifetime<'r>(b_isize: Invariant<'r>) -> Invariant<'static> {
   |                       ^^
   = note: ...does not necessarily outlive the static lifetime

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
